# brain-agent

./: README.md  pyproject.toml  requirements.txt  setup.py  test_brain_performance.py  test_persona_mode_integration.py  test_registry_brain.py
brain_agent/: __init__.py  brain_agent.py  config.py  logger.py  manager_tools.py  query_brain_tool.py  replicants.py  run_brain_agent.py  seed_brain_registries.py  tools.py
registries/: brain_configs_registry.json  brain_configs_registry.json.backup  brain_modes_registry.json  brain_personas_registry.json
tests/test_brain_agent/: test_brain_agent_basic.py
