[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-agent"
version = "0.1.0"
description = "Cognitive processing system for HEAVEN - Handles knowledge synthesis across any corpus size"
readme = "README.md"
authors = [
    {name = "HEAVEN Team", email = "heaven@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "heaven-framework>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/sancovp/brain-agent"
Repository = "https://github.com/sancovp/brain-agent.git"
Documentation = "https://brain-agent.readthedocs.io"
Issues = "https://github.com/sancovp/brain-agent/issues"

[tool.setuptools]
packages = ["brain_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']